Update makepkg.conf with a lot of comments on the functions to use, and how to do profile-guided optimization

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -1,6 +1,78 @@
 #
-# /etc/makepkg.conf
+#  makepkg.conf - Define makepkg defaults
+#       + ADDON PATCHES FOR BASIC PROFILING SUPPORT
 #
+#   Will default cflags to NATIVE, and provides an infrastructure for
+#     defining and switching CFLAGS in various pkgbuilds with standard function names
+#
+
+##  ADDITIONAL FUNCTIONS ( Add these to your PKGBUILDs, generally in the build() prior to configure
+#
+#     apply_CFLAGS - Will apply a set of CFLAGS, CXXFLAGS, LDFLAGS if a profile added, otherwise none.
+#
+#       available profiles ( set the DEFAULT_USE_CFLAGS param )
+#
+#          * NATIVE       - Default. native for system, no LTO
+#          * NATIVE_LTO   - Native for system, including LTO ( much better performance, but doesn't always work )
+#
+#          * SAFE         - Will perform lesser-optimized and for generic systems (i.e. no machine-specific changes)
+#          * SAFE_LTO     - SAFE, with link-time optimization ( much better performance, but doesn't always work )
+#
+#
+#  Profiling:
+#      After you pick some cflags, you can set some profiling modes:
+#
+#        set_cflags_do_profile  - A single change in the PKGBUILD before Configure, put this line.
+#                                   If "gcda.tar" is present in dir, profling will be set to "use",
+#                                     otherwise it will be set to "generate". More info below.
+#
+#        set_cflags_profile_generate - Turn profiling generation on
+#        set_cflags_profile_use      - Use existing profiling information, found in .gcda files (see below)
+#
+#    RECOMMENDED APPROACH FOR PGO (profile-guided optimization): 
+#     Since a lot of system's "cleans" will remove your gcda files you spent so much
+#      time collecting, and you'll need to clean to rebuild and use profiles, please follow this approach.
+#
+#    1. Add "set_cflags_do_profile" before "configure" step in the "build" method of PKGBUILD
+#    2. Build package, install resulting package.
+#    3. Restart the program being profiled, twice (if it is a daemon). This will ensure you are logging to gcda
+#    4. If it is a root daemon, or may be run by root, 
+#      make sure to change all directories to be '2775' and make sure group matches "users",
+#        Restart and run the program a few times, and chmod g+w all the *.gcda files, i.e.  
+#          * find . -name '*.gcda' -exec chmod g+w '{}' ';'
+#          * find . -type d -exec chmod 2775 '{}' ';'
+#          * find . -type d -exec chgrp users '{}' ';'
+#
+#    5. If not, set up a benchmark that runs the program with similar patterns that you would execute it under,
+#         or just be general
+#    6. If daemon, restart the program again
+#    7. In the "sources/whatever" directory, (like sources/gtk-3.10.44), run "mkgcdatar". This will create gcda.tar
+#        And copy it to the parent and parent-of-parent directory.
+#    8. Run "make distclean" or remove the sources directory
+#    9. Run makepkg again, the do_profile will find and extract gcda.tar at the right moment, and profling information
+#        will be used
+#
+#
+#  TO GET PACKAGE BUILDS AND BUILD YOUR OWN PACKAGES WITH CFLAGS OR PGO DESCRIBED ABOVE:
+#    Just once, create /usr/src/arch:
+#       sudo mkdir -p /usr/src/arch  # or as root
+#       sudo chown "YOUR_USERNAME" /usr/src/arch  # or as root
+#
+#   Then, cd into that directory, and use  use 'archsrc-getpkg' (shipped with pacman-utils)
+#     to download the package safely into that directory. Therein you'll find a PKGBUILD
+#     wihch you can edit as noted above to use CFLAGS or PROFILE (or you can set DEFAULT_USE_CFLAGS in
+#      this file to just default to some CFLAGS, but if you're gonna go that route... why not get
+#      up to 50% better performance by doing PGO? 
+#      (I got that on Redis just by running redis-cli benchmark and then saving gcda and rebuilding )
+#
+#   If you modify DEFAULT_USE_CFLAGS below, you can do non-pgo builds just with "buildpkg.sh" script
+#
+
+
+# TODO: Make adding additional profiles simple using eval ( simple), so only envs need to be added
+# TODO: Right now CFLAGS and CXXFLAGS are always set to the same. Make this optional.
+#
+
 
 #########################################################################
 # SOURCE ACQUISITION
@@ -39,20 +111,22 @@ CHOST="x86_64-pc-linux-gnu"
 #SAFE_CFLAGS="-mtune=native -march=native -O3 -pthread -fopenmp -ftree-parallelize-loops=4  -pipe"
 
 NATIVE_CFLAGS="-march=native -mtune=native -O3 -pipe"
+NATIVE_LDFLAGS="-Wl,-O1,--sort-common,-z,relro -Wl,-z,combreloc"
 NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro -Wl,-z,combreloc"
+#NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 
-SAFE_CFLAGS="-march=ivybridge -mtune=native -O3 -pipe"
-SAFE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
+SAFE_CFLAGS="-mtune=generic -O2 -pipe"
+SAFE_LDFLAGS=""
 
 export SAFE_CFLAGS SAFE_LDFLAGS
 
-LTO_CFLAGS="${SAFE_CFLAGS} -flto"
-LTO_LDFLAGS="${SAFE_LDFLAGS},-flto"
+LTO_CFLAGS="${SAFE_CFLAGS} -flto -fuse-linker-plugins"
+LTO_LDFLAGS="${SAFE_LDFLAGS} -flto -fuse-linker-plugins"
 
 export LTO_CFLAGS LTO_LDFLAGS
 
-SUPER_LTO_CFLAGS="${LTO_CFLAGS} -Wl,-hashvals -fuse-linker-plugin"
-SUPER_LTO_LDFLAGS="${LTO_LDFLAGS},-hashvals"
+NATIVE_LTO_CFLAGS="${LTO_CFLAGS} -Wl,-hashvals -fuse-linker-plugin"
+NATIVE_LTO_LDFLAGS="${LTO_LDFLAGS},-hashvals"
 
 DEFAULT_USE_CFLAGS="NATIVE"
 
@@ -60,8 +134,8 @@ DEFAULT_USE_CFLAGS="NATIVE"
 
 export DEFAULT_USE_CFLAGS
 
-export AVAILABLE_USE_CFLAGS="NATIVE SAFE LTO SUPER_LTO"
-export AVAILABLE_USE_CFLAGS_FOR_PRINT="\t-  NATIVE\n\t- SAFE\n\t- LTO\n\t- SUPER_LTO\n"
+export AVAILABLE_USE_CFLAGS="NATIVE SAFE LTO NATIVE_LTO"
+export AVAILABLE_USE_CFLAGS_FOR_PRINT="\t-  NATIVE\n\t- SAFE\n\t- LTO\n\t- NATIVE_LTO\n"
 
 apply_NATIVE_CFLAGS() {
 	export CFLAGS="${NATIVE_CFLAGS}"
@@ -81,13 +155,14 @@ apply_LTO_CFLAGS() {
   export LDFLAGS="${LTO_LDFLAGS}"
 }
 
-apply_SUPER_LTO_CFLAGS() {
-  export CFLAGS="${SUPER_LTO_CFLAGS}"
+apply_NATIVE_LTO_CFLAGS() {
+  export CFLAGS="${NATIVE_LTO_CFLAGS}"
   export CXXFLAGS="${CFLAGS}"
-  export LDFLAGS="${SUPER_LTO_LDFLAGS}"
+  export LDFLAGS="${NATIVE_LTO_LDFLAGS}"
 }
 
-
+# TODO: Change this to use 'eval' and be generic so ONLY an env var needs to be defined,
+#   not an entire set of changes.
 apply_CFLAGS() {
   if [ -z "$1" ];
   then
