makepkg.conf (extras) - Enforce CC and CXX

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -115,6 +115,9 @@ CHOST="x86_64-pc-linux-gnu"
 #CPPFLAGS="-D_FORTIFY_SOURCE=2"
 #SAFE_CFLAGS="-mtune=native -march=native -O3 -pthread -fopenmp -ftree-parallelize-loops=4  -pipe"
 
+export CC="/usr/bin/gcc"
+export CXX="/usr/bin/g++"
+
 NATIVE_CFLAGS="-march=native -mtune=native -O3 -pipe"
 NATIVE_LDFLAGS="-Wl,-O1,--sort-common,-z,relro -Wl,-z,combreloc"
 NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro -Wl,-z,combreloc"
