--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -31,6 +31,14 @@
 #        set_cflags_profile_generate - Turn profiling generation on
 #        set_cflags_profile_use      - Use existing profiling information, found in .gcda files (see below)
 #
+#   NOTE: The above functions inherit the base CFLAGS profile (from apply_CFLAGS / DEFAULT_USE_CFLAGS),
+#      and apply additional flags to use profiling
+#
+#   NOTE: The above 3 functions take an optional arg, "nolto". E.x.  set_cflags_do_profile "nolto"
+#      By default, lto and linker plugin are used (-flto -fuse-linker-plugin).
+#      Providing the argument "nolto" (no LTO) will exclude these, as some applications will not
+#       compile with LTO / ld.gold
+#
 #    RECOMMENDED APPROACH FOR PGO (profile-guided optimization): 
 #     Since a lot of system's "cleans" will remove your gcda files you spent so much
 #      time collecting, and you'll need to clean to rebuild and use profiles, please follow this approach.
@@ -205,15 +213,30 @@ set_CFLAGS() {
 apply_CFLAGS "${DEFAULT_USE_CFLAGS}"
 
 set_cflags_profile_generate() {
-  export CFLAGS="${CFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -Wno-error"
-  export CXXFLAGS="${CFLAGS}"
-  export LDFLAGS="${LDFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -Wno-error"
+  if [ "$1" != "nolto" ];
+  then
+	  export CFLAGS="${CFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -Wno-error"
+	  export CXXFLAGS="${CFLAGS}"
+	  export LDFLAGS="${LDFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -Wno-error"
+  else
+	  export CFLAGS="${CFLAGS} -fprofile-generate -Wno-error"
+	  export CXXFLAGS="${CFLAGS}"
+	  export LDFLAGS="${LDFLAGS} -fprofile-generate -Wno-error"
+  fi
 }
 
 set_cflags_profile_use() {
-  export CFLAGS="${CFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-use -fprofile-correction -Wno-error"
-  export CXXFLAGS="${CFLAGS}"
-  export LDFLAGS="${LDFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-use -fprofile-correction -Wno-error"
+  if [ "$1" != "nolto" ];
+  then
+	  export CFLAGS="${CFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-use -fprofile-correction -Wno-error"
+	  export CXXFLAGS="${CFLAGS}"
+	  export LDFLAGS="${LDFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-use -fprofile-correction -Wno-error"
+  else
+	  export CFLAGS="${CFLAGS} -fprofile-use -fprofile-correction -Wno-error"
+	  export CXXFLAGS="${CFLAGS}"
+	  export LDFLAGS="${LDFLAGS} -fprofile-use -fprofile-correction -Wno-error"
+  fi
+
 #  export MAKEFLAGS="-j1 V=1"
 }
 
@@ -221,9 +244,9 @@ set_cflags_do_profile() {
   if [ -f "${startdir}/gcda.tar" ];
   then
       tar -xf "${startdir}/gcda.tar"
-      set_cflags_profile_use
+      set_cflags_profile_use $1
   else
-      set_cflags_profile_generate
+      set_cflags_profile_generate $1
   fi
 }
 
