makepkg.conf (extras) - Take my name out of PACKAGER field

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -349,7 +349,7 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 LOGDEST=/usr/src/arch/LOGS
 [ ! -d "${LOGDEST}" ] && mkdir -p "${LOGDEST}"
 #-- Packager: name/email of the person or organization building packages
-PACKAGER="Tim Savannah <kata198@gmail.com>"
+#PACKAGER="John Doe <john@doe.com>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
