makepkg.conf - Some minor cleanups of makepkg.conf. Remove '--as-needed' flag from LDFLAGS, even though its an arch default it breaks a lot of compiles, especially with LTO enabled.

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -117,6 +117,17 @@ CARCH="x86_64"
 #CHOST="x86_64-unknown-linux-gnu"
 CHOST="x86_64-pc-linux-gnu"
 
+
+####################
+###
+## Optimization Profile
+##
+################
+
+# DEFAULT_USE_CFLAGS - The default profile to apply.
+#  Use "apply_CFLAGS $NAME" to use a different one.
+DEFAULT_USE_CFLAGS="NATIVE"
+
 #-- Compiler and Linker Flags
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
@@ -127,16 +138,16 @@ export CC="/usr/bin/gcc"
 export CXX="/usr/bin/g++"
 
 NATIVE_CFLAGS="-march=native -mtune=native -O3 -pipe"
-NATIVE_LDFLAGS="-Wl,-O1,--sort-common,-z,relro -Wl,-z,combreloc"
-NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro -Wl,-z,combreloc"
 #NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
+#NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro -Wl,-z,combreloc"
+NATIVE_LDFLAGS="-Wl,-O1,--sort-common,-z,relro,-z,combreloc"
 
 SAFE_CFLAGS="-mtune=generic -O2 -pipe"
-SAFE_LDFLAGS=""
+SAFE_LDFLAGS="-Wl,-O1,--sort-common,-zrelro,-z,combreloc"
 
 export SAFE_CFLAGS SAFE_LDFLAGS
 
-__LTO_FLAGS="-flto -fuse-linker-plugin"
+__LTO_FLAGS="-flto=jobserver -fuse-linker-plugin"
 
 LTO_CFLAGS="${SAFE_CFLAGS} ${__LTO_FLAGS}"
 LTO_LDFLAGS="${SAFE_LDFLAGS} ${__LTO_FLAGS}"
@@ -146,7 +157,6 @@ export LTO_CFLAGS LTO_LDFLAGS
 NATIVE_LTO_CFLAGS="${NATIVE_CFLAGS} ${__LTO_FLAGS}"
 NATIVE_LTO_LDFLAGS="${NATIVE_LDFLAGS} ${__LTO_FLAGS}"
 
-DEFAULT_USE_CFLAGS="NATIVE"
 
 #DEFAULT_USE_CFLAGS="LTO"
 
