Add an impl for 'notin' incase shell-advancedutils is not found

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -124,6 +124,23 @@ CHOST="x86_64-pc-linux-gnu"
 ##
 ################
 
+if ( ! which notin >/dev/null 2>&1 );
+then
+  # shell-advancedutils is not installed, do some cheap impls
+  notin() {
+    HAYSTACK="$(cat --)"
+    
+    for arg in "$@";
+    do
+        if [ "${arg}" = "${HAYSTACK}" ];
+        then
+            return 1;
+        fi
+    done
+    return 0;
+  }
+fi
+
 # DEFAULT_USE_CFLAGS - The default profile to apply.
 #  Use "apply_CFLAGS $NAME" to use a different one.
 DEFAULT_USE_CFLAGS="NATIVE"
@@ -132,7 +149,7 @@ DEFAULT_USE_CFLAGS="NATIVE"
 # -march (or -mcpu) builds exclusively for an architecture
 # -mtune optimizes for an architecture, but builds for whole processor family
 #CPPFLAGS="-D_FORTIFY_SOURCE=2"
-#SAFE_CFLAGS="-mtune=native -march=native -O3 -pthread -fopenmp -ftree-parallelize-loops=4  -pipe"
+
 
 export CC="/usr/bin/gcc"
 export CXX="/usr/bin/g++"
