[extras] makepkg.conf - Add -fprofile-update=prefer-atomic to profile generating flags

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -242,13 +242,13 @@ apply_CFLAGS "${DEFAULT_USE_CFLAGS}"
 set_cflags_profile_generate() {
   if [ "$1" != "nolto" ];
   then
-	  export CFLAGS="${CFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -Wno-error"
+	  export CFLAGS="${CFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -fprofile-update=prefer-atomic -Wno-error"
 	  export CXXFLAGS="${CFLAGS}"
-	  export LDFLAGS="${LDFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -Wno-error"
+	  export LDFLAGS="${LDFLAGS} -flto=jobserver -fuse-linker-plugin -fprofile-generate -fprofile-update=prefer-atomic -Wno-error"
   else
-	  export CFLAGS="${CFLAGS} -fprofile-generate -Wno-error"
+	  export CFLAGS="${CFLAGS} -fprofile-generate -fprofile-update=prefer-atomic -Wno-error"
 	  export CXXFLAGS="${CFLAGS}"
-	  export LDFLAGS="${LDFLAGS} -fprofile-generate -Wno-error"
+	  export LDFLAGS="${LDFLAGS} -fprofile-generate -fprofile-update=prefer-atomic -Wno-error"
   fi
 }
 
