Be consistent with exporting the various profiles. Doesnt really matter, but what the hell.

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -163,6 +163,8 @@ NATIVE_CFLAGS="-march=native -mtune=native -O3 -pipe"
 #NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro -Wl,-z,combreloc"
 NATIVE_LDFLAGS="-Wl,-O1,--sort-common,-z,relro,-z,combreloc"
 
+export NATIVE_CFLAGS NATIVE_LDFLAGS
+
 SAFE_CFLAGS="-mtune=generic -O2 -pipe"
 SAFE_LDFLAGS="-Wl,-O1,--sort-common,-zrelro,-z,combreloc"
 
@@ -184,6 +186,7 @@ export SAFE_LTO_LDFLAGS
 NATIVE_LTO_CFLAGS="${NATIVE_CFLAGS} ${__LTO_FLAGS}"
 NATIVE_LTO_LDFLAGS="${NATIVE_LDFLAGS} ${__LTO_FLAGS}"
 
+export NATIVE_LTO_CFLAGS NATIVE_LTO_LDFLAGS
 
 export AVAILABLE_USE_CFLAGS="NATIVE SAFE LTO NATIVE_LTO SAFE_LTO"
 export AVAILABLE_USE_CFLAGS_FOR_PRINT="\t-  NATIVE\n\t- SAFE\n\t- LTO\n\t- NATIVE_LTO\n\t- SAFE_LTO\n"
