Fix makepkg.conf set_CFLAGS alias

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -282,7 +282,7 @@ apply_CFLAGS() {
 }
 
 set_CFLAGS() {
-  apply_CFLAGS
+  apply_CFLAGS "$@"
 }
 
 #=+=+=+--+=+=+==+=+=+--+=+=+==+=+=+--+=+=+==+=+=+--+=+=+=
