Update optional makepkg.conf, merge some CFLAGS/LDFLAGS updates in from core archlinux version, add ability to toggle between ld.bfd and ld.gold through functions, default 'check' to on (for profiling), add set_cflags_do_profile_nounzip variant to be used in functions other than 'build' as to not overwrite any gcda constructed during 'check'. Add set_cflags_do_profile_useandgen to combine both profile using and profile generation (if gcda.tar is available), otpherwise will just generate. This is useful when, for example, updating a package on a minor point-release   where most of the code and thus profiling is still valid, but the files should be regenerated to catch any changes and match flow/format.

--- a/data/makepkg.conf
+++ b/data/makepkg.conf
@@ -46,6 +46,16 @@
 #        set_cflags_profile_generate - Turn profiling generation on
 #        set_cflags_profile_use      - Use existing profiling information, found in .gcda files (see below)
 #
+#        set_cflags_do_profile_useandgen - Like set_cflags_do_profile, but will always generate.
+#                                           So if gcda.tar is present, both -fprofile-use and -fprofile-generate will
+#                                           be used in *FLAGS.
+#
+#
+#   NOTE: The functions `set_cflags_do_profile' and `set_cflags_do_profile_useandgen' both have variants with
+#     the suffix "_nounzip" (e.x. set_cflags_do_profile_nounzip) which will set the CFLAGS to profile if gcda.tar is
+#     present, but will not extract. Use this in the package() method, for example, so you don't override the .gcda files
+#     generated in check().
+#
 #   NOTE: The above functions inherit the base CFLAGS profile (from apply_CFLAGS / DEFAULT_USE_CFLAGS),
 #      and apply additional flags to use profiling
 #
@@ -182,15 +192,17 @@ fi
 
 #CPPFLAGS="-D_FORTIFY_SOURCE=2"
 
-NATIVE_CFLAGS="-march=native -mtune=native -O3 -pipe"
+NATIVE_CFLAGS="-march=native -mtune=native -O3 -pipe -fno-plt"
 #NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro"
 #NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro -Wl,-z,combreloc"
-NATIVE_LDFLAGS="-Wl,-O1,--sort-common,-z,relro,-z,combreloc"
+#NATIVE_LDFLAGS="-Wl,-O1,--sort-common,-z,relro,-z,combreloc"
+NATIVE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 
 export NATIVE_CFLAGS NATIVE_LDFLAGS
 
 SAFE_CFLAGS="-mtune=generic -O2 -pipe"
-SAFE_LDFLAGS="-Wl,-O1,--sort-common,-zrelro,-z,combreloc"
+#SAFE_LDFLAGS="-Wl,-O1,--sort-common,-zrelro,-z,combreloc"
+SAFE_LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now"
 
 export SAFE_CFLAGS SAFE_LDFLAGS
 
@@ -344,6 +356,33 @@ set_cflags_do_profile() {
   fi
 }
 
+set_cflags_do_profile_nounzip() {
+  if [ -f "${startdir}/gcda.tar" ];
+  then
+      set_cflags_profile_use $1
+  else
+      set_cflags_profile_generate $1
+  fi
+}
+
+
+set_cflags_do_profile_useandgen() {
+  if [ -f "${startdir}/gcda.tar" ];
+  then
+      tar -xf "${startdir}/gcda.tar"
+      set_cflags_profile_use $1
+  fi
+  set_cflags_profile_generate $1
+}
+
+
+set_cflags_do_profile_useandgen_nounzip() {
+  if [ -f "${startdir}/gcda.tar" ];
+  then
+      set_cflags_profile_use $1
+  fi
+  set_cflags_profile_generate $1
+}
 
 ######################################################
 ##            Make Flags                             #
@@ -513,17 +552,29 @@ use_gcc() {
       if [ $# -gt 0 ];
       then
           EXTRA_ARGS=($@)
-          prnitf "WARNING: $# unhandled args to 'use_gcc' function: %s\n\n" "${EXTRA_ARGS[@]}" >&2
+          printf "WARNING: $# unhandled args to 'use_gcc' function: %s\n\n" "${EXTRA_ARGS[@]}" >&2
       fi
   fi
 
 }
+
+use_ld_gold() {
+  export LD="/usr/bin/ld.gold"
+  echo "Using gold"
+}
+
+use_ld_bfd() {
+  export LD="/usr/bin/ld.bfd"
+}
+
+
 
 # use_gcc_native - Just an alias of use_gcc NATIVE,
 #     to be name-compatible with use_clang NATIVE
 use_gcc_native() {
   
   use_gcc
+  use_ld_gold
 
   apply_CFLAGS NATIVE
 
@@ -593,7 +644,7 @@ DEBUG_CXXFLAGS="-g -fvar-tracking-assignments"
 #-- check:    Run the check() function if present in the PKGBUILD
 #-- sign:     Generate PGP signature file
 #
-BUILDENV=(fakeroot !distcc color !ccache !check !sign)
+BUILDENV=(fakeroot !distcc color !ccache check !sign)
 #
 #-- If using DistCC, your MAKEFLAGS will also need modification. In addition,
 #-- specify a space-delimited list of hosts running in the DistCC cluster.
